--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,29 @@
-colorama==0.3.9
-nltk==3.2.5
-numpy==1.14.0
-six==1.11.0
-tensorflow-gpu==1.4.1  # Change to tensorflow==1.4.1 if you need to run CPU-only tensorflow (e.g. on your laptop)
-tensorflow-tensorboard==0.4.0
-tqdm==4.19.5
+absl-py==0.7.1
+astor==0.7.1
+bleach==1.5.0
+certifi==2019.3.9
+colorama==0.4.1
+docopt==0.6.2
+gast==0.2.2
+grpcio==1.19.0
+h5py==2.9.0
+html5lib==0.9999999
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
+Markdown==3.1
+mock==2.0.0
+mosestokenizer==1.0.0
+nltk==3.4
+numpy==1.16.2
+openfile==0.0.7
+pbr==5.1.3
+protobuf==3.7.1
+singledispatch==3.4.0.3
+six==1.12.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+toolwrapper==0.3.0
+tqdm==4.31.1
+Werkzeug==0.15.1
